--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:font="http://schemas.android.com/apk/res-auto"
-    android:background="@color/grey_sss">
+    android:background="@drawable/enterprise_background">
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -11,7 +11,7 @@
         android:layout_height="380dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/layout_shape"
+        android:background="@color/transparant_pure"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_margin="@dimen/space_10">
@@ -24,7 +24,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/space_20"
             android:src="@drawable/logo_bp_batam" />
 
         <ui.CustomtextView
@@ -32,50 +32,57 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/circleView"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
             android:paddingTop="10dp"
-            android:text="Silahkan cek detail data."
-            android:textColor="@color/black"
+            android:text="@string/lupa_password"
+            android:textColor="@color/red"
             android:textSize="16sp"
-            android:typeface="serif" />
+            android:typeface="serif"
+            android:layout_below="@+id/btn_login"
+            android:layout_alignLeft="@+id/btn_login"
+            android:layout_alignStart="@+id/btn_login" />
 
         <ui.CustomEditText
             font:name="Label"
             font:type = "bold"
+            android:drawableLeft="@drawable/gns_user"
             android:textColor="@color/black"
             android:id="@+id/edt_username"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_alignLeft="@+id/textView1"
-            android:layout_below="@+id/textView1"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/edittext_top"
+            android:background="@drawable/edittext_shape"
             android:clickable="false"
             android:cursorVisible="false"
             android:ems="10"
             android:paddingLeft="10dp"
             android:singleLine="true"
-            android:hint="Username" />
+            android:hint="Username"
+            android:layout_below="@+id/circleView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="@dimen/space_20"
+            android:layout_marginRight="@dimen/space_10"
+            android:layout_marginLeft="@dimen/space_10" />
 
         <ui.CustomEditText
             font:name="Label"
             font:type = "bold"
+            android:drawableLeft="@drawable/gns_lock"
             android:textColor="@color/black"
             android:id="@+id/edt_password"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_alignLeft="@+id/edt_username"
             android:layout_below="@+id/edt_username"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/edittext_bottom"
+            android:background="@drawable/edittext_shape"
             android:ems="10"
             android:hint="Password"
             android:paddingLeft="10dp"
             android:password="true"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:layout_marginTop="@dimen/space_5"
+            android:layout_alignRight="@+id/edt_username"
+            android:layout_alignEnd="@+id/edt_username"
+            android:layout_alignLeft="@+id/edt_username"
+            android:layout_alignStart="@+id/edt_username" />
 
         <ui.CustomButton
             font:name="Label"
@@ -87,7 +94,7 @@
             android:layout_alignRight="@+id/edt_password"
             android:layout_below="@+id/edt_password"
             android:layout_marginTop="10dp"
-            android:background="@drawable/btn_shape"
+            android:background="@drawable/btn_shape_all"
             android:textAllCaps="false"
             android:text="LOGIN"
             android:textColor="@color/white" />
@@ -97,10 +104,10 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:layout_alignRight="@+id/textView1"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_toRightOf="@+id/textView1"
-            android:layout_toEndOf="@+id/textView1" />
+            android:layout_alignRight="@+id/circleView"
+            android:layout_alignEnd="@+id/circleView" />
 
     </RelativeLayout>
 
