--- a/app/src/main/res/drawable/btn_shape_header_green.xml
+++ b/app/src/main/res/drawable/btn_shape_header_green.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="45"
-        android:endColor="@color/Green"
-        android:startColor="@color/Green" />
+        android:endColor="@color/green"
+        android:startColor="@color/green" />
 
     <padding
         android:bottom="0dp"
