--- a/app/src/main/res/layout/activity_komentar.xml
+++ b/app/src/main/res/layout/activity_komentar.xml
@@ -21,7 +21,7 @@
         <RelativeLayout
             android:background="@drawable/btn_shape_header"
             android:layout_width="365dp"
-            android:layout_height="@dimen/space_40">
+            android:layout_height="@dimen/space_30">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -35,6 +35,7 @@
                 font:type = "bold"
                 android:id="@+id/textHeader"
                 android:text="Judul Post"
+                android:textSize="@dimen/space_12"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/white"
@@ -42,7 +43,8 @@
                 android:layout_toLeftOf="@+id/imageView2"
                 android:layout_toRightOf="@+id/imageView2"
                 android:layout_toEndOf="@+id/imageView2"
-                android:layout_marginRight="@dimen/space_5" />
+                android:layout_marginRight="@dimen/space_5"
+                android:layout_marginTop="@dimen/space_4" />
 
             <ui.CustomtextView
                 font:name = "Label"
@@ -56,11 +58,12 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginRight="@dimen/space_5" />
+                android:layout_marginRight="@dimen/space_5"
+                android:layout_marginTop="@dimen/space_4" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/space_25"
+                android:layout_height="@dimen/space_25"
                 android:id="@+id/imageView3"
                 android:src="@drawable/eye_white"
                 android:layout_alignTop="@+id/imageView2"
@@ -178,13 +181,13 @@
                 <ui.CustomtextView
                     android:id="@+id/btnDownload"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/space_30"
+                    android:layout_height="@dimen/space_25"
                     android:background="@drawable/btn_shape"
                     android:gravity="center"
                     android:onClick="onClick"
                     android:text="DOWNLOAD"
                     android:textColor="#ffffff"
-                    android:textSize="@dimen/space_14"
+                    android:textSize="@dimen/space_12"
                     font:name="Label"
                     android:layout_weight="1"
                     android:layout_alignParentBottom="true"
@@ -223,13 +226,13 @@
         <ui.CustomtextView
             android:id="@+id/btnPost"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/space_30"
+            android:layout_height="@dimen/space_25"
             android:background="@drawable/btn_shape"
             android:gravity="center"
             android:onClick="onClick"
             android:text="POST"
             android:textColor="#ffffff"
-            android:textSize="@dimen/space_14"
+            android:textSize="@dimen/space_12"
             font:name="Label"
             android:layout_weight="1"
             android:layout_alignParentBottom="true"
