--- a/app/src/main/res/layout/activity_pdfview.xml
+++ b/app/src/main/res/layout/activity_pdfview.xml
@@ -21,13 +21,13 @@
     <ui.CustomtextView
         android:id="@+id/btnDownload"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/space_30"
+        android:layout_height="@dimen/space_25"
         android:background="@drawable/btn_shape"
         android:gravity="center"
         android:onClick="onClick"
         android:text="DOWNLOAD"
         android:textColor="#ffffff"
-        android:textSize="@dimen/space_14"
+        android:textSize="@dimen/space_12"
         font:name="Label"
         android:layout_weight="1"
         android:layout_alignParentBottom="true"
@@ -39,13 +39,13 @@
     <ui.CustomtextView
         android:id="@+id/btnPrint"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/space_30"
-        android:background="@drawable/btn_shape"
+        android:layout_height="@dimen/space_25"
+        android:background="@drawable/btn_shape_facebook"
         android:gravity="center"
         android:onClick="onClick"
         android:text="PRINT"
         android:textColor="#ffffff"
-        android:textSize="@dimen/space_14"
+        android:textSize="@dimen/space_12"
         font:name="Label"
         android:layout_weight="1"
         android:layout_alignParentBottom="true"
