--- a/app/src/main/res/layout/fragment_persuratan_permohonan.xml
+++ b/app/src/main/res/layout/fragment_persuratan_permohonan.xml
@@ -19,7 +19,7 @@
         <RelativeLayout
             android:id="@+id/contact_us_header_container"
             android:layout_width="fill_parent"
-            android:layout_height="@dimen/space_50"
+            android:layout_height="@dimen/space_30"
             android:minHeight="?attr/actionBarSize"
             android:layout_alignParentTop="true"
             android:background="@drawable/btn_shape_header_green"
@@ -32,7 +32,7 @@
                 android:layout_gravity="center"
                 android:text="Permohonan"
                 android:textColor="@color/white"
-                android:textSize="@dimen/toolbar_text_size"
+                android:textSize="@dimen/space_12"
                 android:textStyle="bold"
                 font:name="Label"
                 font:type = "bold"
@@ -55,7 +55,7 @@
                 android:id="@+id/tabs"
                 android:layout_width="@dimen/space_150"
                 android:layout_height="@dimen/space_40"
-                android:background="@color/Green"
+                android:background="@color/green"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 app:tabGravity="fill"
                 app:tabIndicatorColor="@color/colorAccent"
@@ -73,8 +73,8 @@
             </android.support.design.widget.TabLayout>
 
             <ImageView
-                android:layout_width="@dimen/space_30"
-                android:layout_height="@dimen/space_30"
+                android:layout_width="@dimen/space_25"
+                android:layout_height="@dimen/space_25"
                 android:id="@+id/imageView3"
                 android:src="@drawable/gns_email"
                 android:layout_centerVertical="true"
