--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:font="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
+    android:background="@color/white"
     android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
     android:elevation="2dp"
     tools:ignore="UnusedAttribute">
@@ -21,7 +21,7 @@
             font:name = "Avenir_Heavy"
             android:id="@+id/textLabel"
             android:text="Label"
-            android:textColor="@color/white"
+            android:textColor="@color/blu3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
