--- a/app/src/main/res/layout/tool_bar_back.xml
+++ b/app/src/main/res/layout/tool_bar_back.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:font="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimary"
+    android:background="@color/white"
     android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
     android:elevation="2dp"
     tools:ignore="UnusedAttribute">
@@ -21,7 +21,7 @@
             font:name = "Avenir_Heavy"
             android:id="@+id/textLabel"
             android:text="Label"
-            android:textColor="@color/white"
+            android:textColor="@color/blu3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -35,7 +35,8 @@
             android:layout_width="@dimen/space_35"
             android:layout_height="@dimen/space_35"
             android:id="@+id/img_back"
-            android:src="@drawable/arrow_back_white" />
+            android:src="@drawable/arrow_back_white"
+            android:tint="@color/blu3"/>
 
     </RelativeLayout>
 
