--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Old Color
     <color name="colorPrimary">#0091ea</color>
     <color name="colorPrimaryDark">#0ab0d9</color>
     <color name="colorAccent">#0091ea</color>
+    -->
+    <color name="colorPrimary">@color/white</color>
+    <color name="colorPrimaryDark">@color/white</color>
+    <color name="colorAccent">@color/white</color>
 
     <!-- Navigation drawer color-->
     <color name="navigationDrawerBackground">#003580</color>
@@ -18,7 +23,7 @@
     <color name="red">#FF0000</color>
     <color name="blue">#00ccff</color>
     <color name="blue2">#0000CD</color>
-    <color name="blu3">#0099CC</color>
+    <color name="blu3">#0091ea</color>
     <color name="darkorange">#ff8c00</color>
     <color name="transparant_pure">#00000000</color>
     <color name="transparant">#55000000</color>
