--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,12 +19,12 @@
         <ImageView
             android:id="@+id/circleView"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
+            android:layout_height="@dimen/space_140"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_marginTop="@dimen/space_20"
+            android:layout_marginTop="@dimen/space_25"
             android:src="@drawable/logo_bp_batam" />
 
         <ui.CustomtextView
@@ -46,12 +46,12 @@
             font:type = "bold"
             android:drawableLeft="@drawable/gns_user"
             android:textColor="@color/black"
+            android:textSize="@dimen/space_14"
             android:id="@+id/edt_username"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@drawable/edittext_shape"
             android:clickable="false"
-            android:cursorVisible="false"
             android:ems="10"
             android:paddingLeft="10dp"
             android:singleLine="true"
@@ -66,6 +66,7 @@
         <ui.CustomEditText
             font:name="Label"
             font:type = "bold"
+            android:textSize="@dimen/space_14"
             android:drawableLeft="@drawable/gns_lock"
             android:textColor="@color/black"
             android:id="@+id/edt_password"
