--- a/app/src/main/res/drawable/btn_shape_all.xml
+++ b/app/src/main/res/drawable/btn_shape_all.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="45"
-        android:endColor="@color/colorAccent"
+        android:endColor="@color/blu3"
         android:startColor="@color/colorAccent" />
 
     <padding
