--- a/app/src/main/res/layout/fragment_permohonan_pribadi.xml
+++ b/app/src/main/res/layout/fragment_permohonan_pribadi.xml
@@ -3,37 +3,113 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/navigationDrawerBackgroundDetail">
 
-    <android.support.v7.widget.RecyclerView
-        android:visibility="visible"
-        android:id="@+id/my_recycler_view"
+    <ui.CustomEditText
+        android:id="@+id/text_search"
+        android:textColor="@color/white"
+        android:drawableRight="@drawable/ic_search_white_32"
+        android:background="@drawable/btn_shape_all_blue"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="@dimen/space_45"
+        android:layout_marginLeft="@dimen/space_5"
+        android:layout_marginTop="@dimen/space_5"
+        android:layout_marginRight="@dimen/space_5"
+        android:hint="search" />
 
-    <RelativeLayout
-        android:visibility="gone"
-        android:id="@+id/layout_download"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:font="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/space_5"
+        android:background="@drawable/btn_shape_white">
+        <RelativeLayout
+            android:id="@+id/contact_us_header_container"
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/space_40"
+            android:minHeight="?attr/actionBarSize"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/btn_shape_white"
+            android:orientation="horizontal">>
+            <ui.CustomtextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Permohonan"
+                android:textColor="@color/red"
+                android:textSize="@dimen/space_18"
+                android:textStyle="bold"
+                font:name="GOTHAM_BOLD"
+                font:type = "bold"
+                android:id="@+id/view2"
+                android:layout_toEndOf="@+id/imageView14"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/imageView14"
+                android:layout_alignParentBottom="true"
+                android:gravity="fill_vertical" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView9"
-            android:src="@drawable/pdf"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            <ImageView
+                android:layout_width="@dimen/space_40"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView"
+                android:src="@drawable/gns_menu"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:tint="@color/red" />
 
-        <com.ayz4sci.androidfactory.DownloadProgressView
-            android:layout_below="@+id/imageView9"
-            android:id="@+id/downloadProgressView"
+            <ImageView
+                android:layout_width="@dimen/space_35"
+                android:layout_height="match_parent"
+                android:id="@+id/imageView14"
+                android:src="@drawable/document_black"
+                android:tint="@color/red"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true" />
+        </RelativeLayout>
+
+        <View
+            android:background="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal" />
-    </RelativeLayout>
+            android:layout_height="1dp"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:visibility="visible"
+            android:id="@+id/my_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/layout_download"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView9"
+                android:src="@drawable/pdf"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+            <com.ayz4sci.androidfactory.DownloadProgressView
+                android:layout_below="@+id/imageView9"
+                android:id="@+id/downloadProgressView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
