--- a/app/src/main/res/layout/item_row_detail_expandable.xml
+++ b/app/src/main/res/layout/item_row_detail_expandable.xml
@@ -1,31 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:font="http://schemas.android.com/apk/res-auto"
-
+    android:orientation="horizontal"
     android:background="@drawable/shape_nav_menu_selector_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ui.CustomtextView
-        font:name = "Label"
+        font:name = "GOTHAM_LIGHT"
 
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textView"
         android:layout_marginTop="@dimen/space_7"
-        android:layout_marginLeft="@dimen/space_50"
+        android:layout_marginLeft="@dimen/space_30"
         android:layout_marginBottom="@dimen/space_7" />
 
-    <ImageView
-        android:layout_width="@dimen/space_25"
-        android:layout_height="@dimen/space_25"
-        android:id="@+id/imageView8"
-        android:layout_gravity="right"
-        android:src="@drawable/circle"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="@dimen/space_7"
-        android:layout_marginTop="2dp" />
-</RelativeLayout>
+    <ui.CustomtextView
+        font:name = "GOTHAM_BLACK"
+
+        android:layout_width="@dimen/space_40"
+        android:layout_height="wrap_content"
+        android:text="123"
+        android:textSize="@dimen/space_11"
+        android:id="@+id/textStatus1"
+        android:background="@drawable/btn_shape_all_transparant"
+        android:layout_marginTop="@dimen/space_7"
+
+        android:layout_marginBottom="@dimen/space_7"
+        android:layout_marginLeft="@dimen/space_10"
+        android:gravity="center" />
+
+    <ui.CustomtextView
+        font:name = "GOTHAM_BLACK"
+        android:layout_width="@dimen/space_40"
+        android:layout_height="wrap_content"
+        android:text="123"
+        android:textSize="@dimen/space_11"
+        android:textColor="@color/white"
+        android:id="@+id/textStatus2"
+        android:background="@drawable/btn_shape_all_red"
+        android:layout_marginTop="@dimen/space_7"
+        android:layout_marginBottom="@dimen/space_7"
+        android:layout_marginLeft="@dimen/space_10"
+        android:gravity="center" />
+
+
+</LinearLayout>
