--- a/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
@@ -60,7 +60,8 @@
                     android:src="@drawable/gns_clock"
                     android:layout_alignBottom="@+id/text_Name"
                     android:layout_toLeftOf="@+id/textView"
-                    android:layout_toStartOf="@+id/textView" />
+                    android:layout_toStartOf="@+id/textView"
+                    android:layout_marginTop="@dimen/space_3" />
 
             </RelativeLayout>
 
@@ -77,7 +78,7 @@
                 android:id="@+id/layout_attachment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/grey_s"
+                android:background="@color/navigationDrawerBackgroundDetail"
                 android:layout_below="@+id/text_Date"
                 android:layout_alignRight="@+id/text_time"
                 android:layout_alignEnd="@+id/text_time"
@@ -115,7 +116,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:src="@drawable/document_black"
+                    android:src="@drawable/pdf"
                     android:layout_marginTop="@dimen/space_5"
                     android:layout_marginBottom="@dimen/space_5" />
 
@@ -124,90 +125,18 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/space_35">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_toLeftOf="@+id/btnDownload"
-                    android:layout_toStartOf="@+id/btnDownload">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                        <ImageView
-                            android:id="@+id/img_indicator"
-                            android:src="@drawable/ball_red"
-                            android:layout_width="@dimen/space_20"
-                            android:layout_height="match_parent" />
-
-                        <ui.CustomtextView
-                            android:id="@+id/text_status"
-                            android:textSize="@dimen/space_9"
-                            android:text="Penting"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_toRightOf="@+id/img_indicator"
-                            android:layout_toEndOf="@+id/img_indicator"
-                            android:gravity="center" />
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:id="@+id/layout_print"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                        <ImageView
-                            android:id="@+id/img_print"
-                            android:src="@drawable/print"
-                            android:layout_width="@dimen/space_20"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="@dimen/space_2" />
-
-                        <ui.CustomtextView
-                            android:textSize="@dimen/space_9"
-                            android:text="Print"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_toRightOf="@+id/img_print"
-                            android:layout_toEndOf="@+id/img_print"
-                            android:gravity="center" />
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:id="@+id/layout_komentar"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1">
-
-                        <ImageView
-                            android:id="@+id/img_chat"
-                            android:src="@drawable/chat"
-                            android:layout_width="@dimen/space_20"
-                            android:layout_height="match_parent" />
-
-                        <ui.CustomtextView
-                            android:text="Komentar"
-                            android:textSize="@dimen/space_9"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_toRightOf="@+id/img_chat"
-                            android:layout_toEndOf="@+id/img_chat"
-                            android:gravity="center" />
-                    </RelativeLayout>
-                </LinearLayout>
+                android:layout_height="@dimen/space_40"
+                android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
+                    android:drawableLeft="@drawable/download24"
                     android:id="@+id/btnDownload"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:background="@drawable/btn_shape"
+                    android:background="@drawable/btn_shape_all_blue"
                     android:gravity="center"
                     android:onClick="onClick"
-                    android:text="DOWNLOAD"
+                    android:text="lihat dokumen"
                     android:textColor="#ffffff"
                     android:textSize="@dimen/space_12"
                     font:name="Label"
