--- a/app/src/main/res/layout/row_buletin_detail.xml
+++ b/app/src/main/res/layout/row_buletin_detail.xml
@@ -78,7 +78,7 @@
                 android:id="@+id/layout_attachment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/grey_s"
+                android:background="@color/navigationDrawerBackgroundDetail"
                 android:layout_below="@+id/text_Date"
                 android:layout_alignRight="@+id/text_time"
                 android:layout_alignEnd="@+id/text_time"
@@ -116,7 +116,7 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:src="@drawable/document_black"
+                    android:src="@drawable/pdf"
                     android:layout_marginTop="@dimen/space_5"
                     android:layout_marginBottom="@dimen/space_5" />
 
@@ -127,7 +127,7 @@
                 android:id="@+id/btnDownload"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/space_25"
-                android:background="@drawable/btn_shape"
+                android:background="@drawable/btn_shape_stgh"
                 android:gravity="center"
                 android:onClick="onClick"
                 android:text="DOWNLOAD"
