--- a/app/src/main/res/layout/row_persuratan_permohonan.xml
+++ b/app/src/main/res/layout/row_persuratan_permohonan.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="110dp">
+        android:layout_height="118dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -23,7 +23,10 @@
             android:layout_weight="4">
 
             <ui.CustomtextView
+                font:name = "GOTHAM_BOLD"
+                android:textSize="@dimen/space_12"
                 android:id="@+id/text_Date"
+
                 android:text="Senin,19 sept 2016"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -31,7 +34,8 @@
                 android:layout_marginTop="@dimen/space_2" />
 
             <ui.CustomtextView
-                font:name = "Label"
+                font:name = "GOTHAM_BOLD"
+                android:textSize="@dimen/space_12"
                 android:id="@+id/text_time"
                 android:text="10:46 AM"
                 android:layout_width="wrap_content"
@@ -57,7 +61,7 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name="Label"
+                    font:name = "GOTHAM_LIGHT"
                     android:id="@+id/lbl_attach"
                     android:text="Attachemnt"
                     android:layout_width="match_parent"
@@ -65,20 +69,22 @@
                     android:maxLines="1"
                     android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
-                    android:layout_toEndOf="@+id/imageView6" />
+                    android:layout_toEndOf="@+id/imageView6"
+                    android:layout_marginRight="@dimen/space_45" />
 
                 <ui.CustomtextView
-                    font:name="Avenir_LightOblique"
+                    font:name = "GOTHAM_LIGHT"
                     android:id="@+id/lbl_size"
                     android:text="Attachemnt asdas asdas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/lbl_attach"
-                    android:textStyle="italic"
                     android:maxLines="1"
                     android:layout_alignBottom="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
-                    android:layout_toEndOf="@+id/imageView6" />
+                    android:layout_toEndOf="@+id/imageView6"
+                    android:layout_marginRight="@dimen/space_45"
+                    android:textStyle="italic" />
 
                 <ImageView
                     android:layout_width="@dimen/space_40"
@@ -87,46 +93,59 @@
                     android:layout_alignParentTop="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:src="@drawable/document_black"
+                    android:src="@drawable/pdf"
                     android:layout_marginTop="@dimen/space_5"
                     android:layout_marginBottom="@dimen/space_5" />
+
+                <ImageView
+                    android:layout_width="@dimen/space_40"
+                    android:layout_height="@dimen/space_40"
+                    android:id="@+id/imageView15"
+                    android:layout_alignTop="@+id/lbl_attach"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/circle_kosong" />
 
 
             </RelativeLayout>
 
             <ui.CustomtextView
-                android:id="@+id/btnDownload"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/space_25"
-                android:background="@drawable/btn_shape"
-                android:gravity="center"
-                android:onClick="onClick"
-                android:text="DOWNLOAD"
-                android:textColor="#ffffff"
-                android:textSize="@dimen/space_12"
-                font:name="Label"
-                android:layout_weight="1"
-                android:layout_below="@+id/layout_attachment"
-                android:layout_toLeftOf="@+id/text_time"
-                android:layout_toStartOf="@+id/text_time"
-                android:layout_marginRight="@dimen/space_5" />
-
-            <ui.CustomtextView
+                android:drawableLeft="@drawable/info_32"
                 android:id="@+id/btnPrint"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/space_25"
+                android:layout_height="@dimen/space_35"
                 android:background="@drawable/btn_shape_facebook"
                 android:gravity="center"
                 android:onClick="onClick"
-                android:text="PRINT"
+                android:text="lihat detail"
                 android:textColor="#ffffff"
-                android:textSize="@dimen/space_12"
-                font:name="Label"
+                android:textSize="@dimen/space_14"
+                font:name = "GOTHAM_BLACK"
+                android:layout_weight="1"
+                android:layout_below="@+id/layout_attachment"
+                android:layout_toLeftOf="@+id/btnDownload"
+                android:layout_toStartOf="@+id/btnDownload"
+                android:layout_marginRight="@dimen/space_5"
+                android:layout_marginTop="@dimen/space_3" />
+
+            <ui.CustomtextView
+                android:drawableLeft="@drawable/download24"
+                android:id="@+id/btnDownload"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/space_35"
+                android:background="@drawable/btn_shape_all_blue"
+                android:gravity="center"
+                android:onClick="onClick"
+                android:text="lihat dokumen"
+                android:textColor="#ffffff"
+                android:textSize="@dimen/space_14"
+                font:name = "GOTHAM_BLACK"
                 android:layout_weight="1"
                 android:layout_below="@+id/layout_attachment"
                 android:layout_alignRight="@+id/text_time"
                 android:layout_alignEnd="@+id/text_time"
-                android:layout_marginRight="@dimen/space_5" />
+                android:layout_marginRight="@dimen/space_5"
+                android:layout_marginTop="@dimen/space_3" />
 
             <ImageView
                 android:layout_width="@dimen/space_20"
@@ -138,27 +157,15 @@
                 android:layout_toLeftOf="@+id/text_time" />
 
             <ImageView
-                android:layout_width="@dimen/space_30"
-                android:layout_height="@dimen/space_30"
+                android:layout_width="@dimen/space_40"
+                android:layout_height="@dimen/space_35"
                 android:id="@+id/imageView5"
+                android:src="@drawable/circle_cc"
+                android:layout_toLeftOf="@+id/btnPrint"
+                android:layout_toStartOf="@+id/btnPrint"
+                android:layout_alignParentBottom="true"
                 android:layout_below="@+id/layout_attachment"
-                android:layout_alignLeft="@+id/layout_attachment"
-                android:layout_alignStart="@+id/layout_attachment"
-                android:src="@drawable/ball_grey" />
-
-            <ui.CustomtextView
-                font:name = "Label"
-                android:id="@+id/text_status"
-                android:text="decline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/imageView5"
-                android:layout_alignTop="@+id/imageView5"
-                android:gravity="fill_vertical"
-                android:layout_toLeftOf="@+id/btnDownload"
-                android:layout_toRightOf="@+id/imageView5"
-                android:layout_toEndOf="@+id/imageView5"
-                android:textColor="@color/black" />
+                android:layout_marginBottom="@dimen/space_3" />
 
         </RelativeLayout>
 
