--- a/app/src/main/res/layout/tool_bar_back.xml
+++ b/app/src/main/res/layout/tool_bar_back.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:font="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
-    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
+    android:theme="@style/ToolbarColoredBackArrow"
     android:elevation="2dp"
     tools:ignore="UnusedAttribute">
 
