--- a/app/src/main/res/layout/fragment_bbs.xml
+++ b/app/src/main/res/layout/fragment_bbs.xml
@@ -42,7 +42,7 @@
                 android:text="BBS"
                 android:textColor="@color/red"
                 android:textSize="@dimen/space_12"
-                font:name="Label"
+                font:name="GOTHAM_BOLD"
                 font:type = "bold"
                 android:id="@+id/view2"
                 android:layout_centerVertical="true"
@@ -66,6 +66,7 @@
                 app:tabPaddingEnd="-1dp"
                 app:tabPaddingStart="-1dp"
                 app:tabPaddingTop="-1dp"
+                font:name="GOTHAM_BOLD"
                 font:tabTextColor="@color/red"
                 android:elevation="2dp"
                 android:layout_centerVertical="true"
