--- a/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_daftar_pesanan.xml
@@ -33,7 +33,7 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name="Avenir_Heavy"
+                    font:name="GOTHAM_BLACK"
                     font:type ="bold"
                     android:id="@+id/text_Name"
                     android:textColor="@color/blu3"
@@ -41,33 +41,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
-                <ui.CustomtextView
-                    font:name="Label"
-                    android:id="@+id/textView"
-                    android:gravity="right"
-                    android:text="10:49 AM"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="@dimen/space_5" />
-
-                <ImageView
-                    android:layout_width="@dimen/space_20"
-                    android:layout_height="@dimen/space_20"
-                    android:id="@+id/imageView13"
-                    android:src="@drawable/gns_clock"
-                    android:layout_alignBottom="@+id/text_Name"
-                    android:layout_toLeftOf="@+id/textView"
-                    android:layout_toStartOf="@+id/textView"
-                    android:layout_marginTop="@dimen/space_3" />
-
             </RelativeLayout>
 
             <ui.CustomtextView
-                font:name="Label"
-                android:textColor="@color/black"
+                font:name="GOTHAM_LIGHT"
+                android:textSize="@dimen/space_12"
                 android:id="@+id/text_Date"
                 android:text="Senin, 29 Agustus 2016, pukul 02:02"
                 android:layout_width="wrap_content"
@@ -86,38 +64,51 @@
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name="Label"
-                    android:id="@+id/lbl_attach"
-                    android:text="Attachemnt"
+                    font:name="GOTHAM_LIGHT"
+                    android:id="@+id/lbl_attach1"
+                    android:text="Attachments :"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:layout_alignTop="@+id/imageView6"
-                    android:layout_toRightOf="@+id/imageView6"
-                    android:layout_toEndOf="@+id/imageView6" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <ui.CustomtextView
-                    font:name="Avenir_LightOblique"
-                    android:id="@+id/lbl_size"
+                    font:name="GOTHAM_LIGHT"
+                    android:id="@+id/lbl_attach"
                     android:text="Attachemnt asdas asdas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/lbl_attach"
                     android:textStyle="italic"
                     android:maxLines="1"
-                    android:layout_alignBottom="@+id/imageView6"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignTop="@+id/imageView6"
                     android:layout_toRightOf="@+id/imageView6"
-                    android:layout_toEndOf="@+id/imageView6" />
+                    android:layout_toEndOf="@+id/imageView6"
+                    android:layout_marginTop="@dimen/space_3" />
+
+                <ui.CustomtextView
+                    font:name="GOTHAM_LIGHT"
+                    android:id="@+id/lbl_size"
+                    android:text="Attachemnt asdas asdas asd asd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="italic"
+                    android:maxLines="1"
+                    android:layout_below="@+id/lbl_attach"
+                    android:layout_toRightOf="@+id/imageView6"
+                    android:layout_toEndOf="@+id/imageView6"
+                    android:layout_marginTop="@dimen/space_2" />
 
                 <ImageView
                     android:layout_width="@dimen/space_40"
                     android:layout_height="@dimen/space_40"
                     android:id="@+id/imageView6"
-                    android:layout_alignParentTop="true"
+                    android:layout_below="@+id/lbl_attach1"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:src="@drawable/pdf"
-                    android:layout_marginTop="@dimen/space_5"
                     android:layout_marginBottom="@dimen/space_5" />
 
 
@@ -139,7 +130,7 @@
                     android:text="lihat dokumen"
                     android:textColor="#ffffff"
                     android:textSize="@dimen/space_12"
-                    font:name="Label"
+                    font:name="GOTHAM_BLACK"
 
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
