--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,16 +20,17 @@
     <color name="Pink">#ff78cb</color>
     <color name="grey">#939393</color>
     <color name="black">#000000</color>
+    <color name="black_ep">#211f1f</color>
     <color name="red">#FF0000</color>
     <color name="blue">#00ccff</color>
     <color name="blue2">#0000CD</color>
-    <color name="blu3">#0091ea</color>
+    <color name="blu3">#2aaae1</color>
     <color name="darkorange">#ff8c00</color>
     <color name="transparant_pure">#00000000</color>
     <color name="transparant">#55000000</color>
     <color name="text_color">#31D1F1</color>
     <color name="white">#ffffff</color>
-    <color name="Green">#5dfc0a</color>
+    <color name="Green">#05cc47</color>
     <color name="Green_chat">#FAEAE8</color>
     <color name="Green_Papper">#397D02</color>
     <color name="lightblack">#404040</color>
