--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:text="@string/lupa_password"
-            android:textColor="@color/red"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:typeface="serif"
             android:layout_below="@+id/btn_login"
