--- a/app/src/main/res/layout/activity_pdfview.xml
+++ b/app/src/main/res/layout/activity_pdfview.xml
@@ -1,58 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:font="http://schemas.android.com/apk/res-auto">
+    xmlns:font="http://schemas.android.com/apk/res-auto"
+    android:background="@color/navigationDrawerBackgroundDetail">
 
     <include
         android:id="@+id/tool_bar"
         layout="@layout/tool_bar" >
     </include>
 
-    <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/pdfView"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tool_bar"
-        android:layout_above="@+id/btnDownload"
-        android:layout_marginLeft="@dimen/space_5"
-        android:layout_marginRight="@dimen/space_5" />
+        android:background="@color/navigationDrawerBackgroundDetail">
 
-    <ui.CustomtextView
-        android:id="@+id/btnDownload"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/space_25"
-        android:background="@drawable/btn_shape"
-        android:gravity="center"
-        android:onClick="onClick"
-        android:text="DOWNLOAD"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/space_12"
-        font:name="Label"
-        android:layout_weight="1"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/btnPrint"
-        android:layout_toStartOf="@+id/btnPrint"
-        android:layout_marginRight="@dimen/space_10"
-        android:layout_marginBottom="@dimen/space_20" />
-
-    <ui.CustomtextView
-        android:id="@+id/btnPrint"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/space_25"
-        android:background="@drawable/btn_shape_facebook"
-        android:gravity="center"
-        android:onClick="onClick"
-        android:text="PRINT"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/space_12"
-        font:name="Label"
-        android:layout_weight="1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/space_20"
-        android:layout_marginRight="@dimen/space_5" />
+        <com.github.barteksc.pdfviewer.PDFView
+            android:id="@+id/pdfView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/space_5"
+            android:layout_marginRight="@dimen/space_5"
+            android:background="@color/white"
+            android:layout_above="@+id/btnDistribusi"
+            android:layout_marginTop="@dimen/space_5" />
 
 
-</RelativeLayout>
+        <LinearLayout
+            android:background="@color/Green"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/space_50"
+            android:layout_alignParentBottom="true"
+
+            android:id="@+id/btnDistribusi">
+
+            <ui.CustomtextView
+                font:name = "GOTHAM_BOLD"
+                android:text="DISTRIBUSIKAN"
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="right|fill_vertical"
+                android:layout_weight="4"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="6">
+
+                <ImageView
+                    android:src="@drawable/right"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="match_parent" />
+            </RelativeLayout>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+
+</LinearLayout>
